--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Seu Plano Personalizado está pronto ✅</title>
-  <meta name="description" content="Pré-pagamento: página de confirmação com gatilhos de conversão, usa IMC e resultado do quiz para personalização.">
+  <meta name="description" content="Pré-pagamento: página personalizada com base no seu nome, IMC e biotipo.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -43,7 +43,7 @@
       100% { background-position: 0% 50%; }
     }
 
-    /* === Galeria fixa === */
+    /* === Galeria === */
     .galeria img{
       transition:transform .4s ease, box-shadow .4s ease;
       border-radius:1rem;
@@ -69,27 +69,15 @@
     </div>
   </header>
 
-  <!-- Hero -->
+  <!-- Hero Personalizado -->
   <section class="bg-gradient-to-b from-white to-slate-100">
-    <div class="container mx-auto px-4 py-10 grid lg:grid-cols-2 gap-10 items-center">
-      <div>
-        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">Seu plano personalizado está pronto 🎉</h1>
-        <p id="intro" class="mt-4 text-lg text-slate-600">Com base nas suas respostas, montamos um <strong>PLANO COMPLETO</strong> e 100% ajustado ao seu corpo e rotina.</p>
-        <div id="imcInfo" class="mt-4 hidden"></div>
-        <div class="mt-6 flex gap-3">
-          <a id="btnContinuarTop" href="#oferta" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Ver o que você vai receber</a>
-          <span class="text-slate-500 self-center">Leva menos de 1 minuto</span>
-        </div>
-      </div>
-      <div class="relative">
-        <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
-          <img src="https://dietapronta.online/nutri2.jpg" alt="Alimentos saudáveis" class="w-full h-72 object-cover"/> 
-          <div class="p-6">
-            <h3 class="text-xl font-bold">Plano realmente aplicável</h3>
-            <p class="mt-1 text-slate-600">Nada de fórmulas mágicas: passos simples, combinações inteligentes e foco no que funciona para <span id="nomeSpan">você</span>.</p>
-          </div>
-        </div>
-      </div>
+    <div class="container mx-auto px-4 py-10 text-center">
+      <h1 id="tituloPersonalizado" class="text-3xl md:text-5xl font-extrabold leading-tight text-emerald-700">
+        Seu plano personalizado está pronto 🎉
+      </h1>
+      <p id="subPersonalizado" class="mt-4 text-lg text-slate-700 max-w-2xl mx-auto">
+        Montamos um <strong>plano 100% ajustado ao seu corpo e rotina</strong>, garantindo resultados reais e sustentáveis.
+      </p>
     </div>
   </section>
 
@@ -114,18 +102,15 @@
             <p id="descSpan" class="mt-1 text-slate-800"></p>
           </div>
 
-          <!-- Botão dourado com brilho -->
+          <!-- Botão dourado -->
           <div class="text-center mt-6">
-            <button id="btnResultados">
-              📸 Veja os resultados de nossos pacientes
-            </button>
+            <button id="btnResultados">📸 Veja os resultados de nossos pacientes</button>
           </div>
         </div>
 
-        <!-- BOX DE PAGAMENTO -->
+        <!-- Box de Pagamento -->
         <aside class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft text-center relative">
           <div id="countdownBox" class="mx-auto">⏰ <span>Oferta expira em:</span> <span id="countdown">05:00</span></div>
-
           <div class="text-sm text-slate-500 mt-4">Continue</div>
           <h3 class="text-xl font-extrabold mt-1">Liberar acesso agora</h3>
 
@@ -141,21 +126,15 @@
           <div class="mt-4 text-sm text-slate-500">Acesso imediato • Conteúdo digital • Suporte por WhatsApp</div>
 
           <div id="mp-checkout" class="mt-6"></div>
-
           <a id="btnPagamento" href="#" class="mt-4 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">
             Quero meu plano agora
           </a>
-
-          <div id="buyersCount" class="mt-4 text-amber-600 font-semibold text-lg">
-            🔥 <span id="buyersNumber">37</span> pessoas compraram nas últimas 24h!
-          </div>
-          <div class="mt-4 text-xs text-slate-500">Ao continuar, você confirma que leu e concorda com nossos termos.</div>
         </aside>
       </div>
     </div>
   </section>
 
-  <!-- GALERIA FIXA -->
+  <!-- Galeria -->
   <section class="bg-white py-12 border-t border-slate-200">
     <div class="container mx-auto px-4 text-center">
       <h2 class="text-3xl font-extrabold text-emerald-600 mb-6">Resultados Reais de Nossos Pacientes 💪</h2>
@@ -176,80 +155,24 @@
 
   <script>
   document.addEventListener("DOMContentLoaded",function(){
-    const MP_PUBLIC_KEY="APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
-    const MP_ENDPOINT="https://dietapronta.online/api/mp-preference";
-    const CHECK_STATUS="https://italomelo.com/server/check_status.php";
-    const HOME_UPSELL="https://dietapronta.online/upsell/?ref=";
-    const $=id=>document.getElementById(id);
+    const nome = localStorage.getItem('lead_nome') || '';
+    const imc  = localStorage.getItem('quiz_imc_value') || '';
+    const imcLabel = localStorage.getItem('quiz_imc_label') || '';
+    const biotipo = localStorage.getItem('body_type') || localStorage.getItem('quiz_body_type') || '';
 
-    const nome=localStorage.getItem('lead_nome')||'';
-    const email=localStorage.getItem('lead_email')||'';
-    const whats=localStorage.getItem('lead_whats')||'';
-    const diet_title=localStorage.getItem('diet_title')||'Plano de Dieta Completo';
-    const body_type=localStorage.getItem('body_type')||'';
-    const ref='ref-'+Date.now()+'-'+Math.random().toString(36).slice(2,8);
-    try{localStorage.setItem('mp_external_ref',ref);}catch(e){}
-
-    if($('year'))$('year').textContent=new Date().getFullYear();
-
-    let timeLeft=5*60;
-    const countdownEl=$('countdown');
-    const countdownBox=$('countdownBox');
-    setInterval(()=>{const m=String(Math.floor(timeLeft/60)).padStart(2,'0');const s=String(timeLeft%60).padStart(2,'0');countdownEl.textContent=`${m}:${s}`;if(timeLeft<=60)countdownBox.classList.add("pulse");if(timeLeft<=0){countdownEl.textContent="00:00";}timeLeft--;},1000);
-
-    const buyersEl=$('buyersNumber');
-    let buyers=30+Math.floor(Math.random()*8);
-    buyersEl.textContent=buyers;
-    setInterval(()=>{const c=Math.random()<0.5?-1:1;buyers=Math.max(20,buyers+c);buyersEl.textContent=buyers;},7000);
-
-    $('btnPagamento').addEventListener('click',async(ev)=>{
-      ev.preventDefault();
-      const btn=$('btnPagamento');
-      btn.disabled=true;
-      btn.textContent="Gerando pagamento...";
-      try{
-        const r=await fetch(MP_ENDPOINT,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({
-          valor:19.90,titulo:diet_title,external_reference:ref,
-          customer_name:nome,customer_email:email,customer_whatsapp:whats,body_type
-        })});
-        const data=await r.json();
-        if(!data||!data.id)throw new Error("Falha ao criar preferência.");
-        const mp=new MercadoPago(MP_PUBLIC_KEY,{locale:"pt-BR"});
-        mp.checkout({preference:{id:data.id},autoOpen:true,render:{container:"#mp-checkout",label:"Pagar R$ 19,90"}});
-        btn.textContent="Abrindo pagamento...";
-        startPolling(ref,btn);
-      }catch(e){console.error(e);btn.textContent="Erro, tente novamente";}
-      btn.disabled=false;
-    });
-
-    function startPolling(ref,btn){
-      let tries=0;
-      const timer=setInterval(async()=>{
-        tries++;
-        try{
-          const res=await fetch(`${CHECK_STATUS}?ref=${encodeURIComponent(ref)}&t=${Date.now()}`);
-          const data=await res.json();
-          if(data&&data.found){
-            const st=(data.status||"").toLowerCase();
-            if(st==="approved"){
-              clearInterval(timer);
-              btn.textContent="✅ Pagamento aprovado! Redirecionando...";
-              setTimeout(()=>window.location.href=HOME_UPSELL+encodeURIComponent(ref),2000);
-            }
-          }
-        }catch(e){console.warn(e);}
-        if(tries>40)clearInterval(timer);
-      },5000);
+    // Personalização dinâmica
+    const titulo = document.getElementById('tituloPersonalizado');
+    const subtitulo = document.getElementById('subPersonalizado');
+    if (nome && titulo && subtitulo) {
+      titulo.innerHTML = `${nome}, seu plano personalizado está pronto 🎉`;
+      subtitulo.innerHTML = `De acordo com seu <strong>peso</strong>, seu <strong>IMC é ${imc} (${imcLabel})</strong> e seu <strong>biotipo é ${biotipo}</strong>.<br>Com base nesses dados, criamos o plano ideal para você alcançar excelentes resultados! 💪`;
     }
 
-    // === Rolagem suave até a galeria ===
+    // === Scroll suave até galeria ===
     const btnResultados=document.getElementById('btnResultados');
     if(btnResultados){
       btnResultados.addEventListener('click',()=>{
-        const galeria=document.querySelector('.galeria');
-        if(galeria){
-          galeria.scrollIntoView({behavior:'smooth',block:'start'});
-        }
+        document.querySelector('.galeria')?.scrollIntoView({behavior:'smooth',block:'start'});
       });
     }
   });
