--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -85,7 +85,7 @@
           <a id="btnContinuarTop" href="#oferta" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">
             Ver o que você vai receber
           </a>
-          <span class="text-slate-500 self-center">Leva menos de 1 minuto</span>
+          <span class="text-slate-500 self-center">receba agora! envie imediato!</span>
         </div>
       </div>
       <div class="relative">
@@ -94,7 +94,7 @@
           <div class="p-6">
             <h3 class="text-xl font-bold">Plano realmente aplicável</h3>
             <p class="mt-1 text-slate-600">
-              Nada de fórmulas mágicas: passos simples, combinações inteligentes e foco no que funciona para <span id="nomeSpan">você</span>.
+             Olá, ficamos felizes em poder te ajudar! preparamos com muito carinho uma dieta 100% personalizada para seu IMC e Biotipo! Vamos trabalhar com o simples que funciona! combinações inteligentes e foco!. Já ajudamos milhares de pessoas com o perfil igual ao seu, e temos plena confiança que você irá se sair super bem! 
             </p>
           </div>
         </div>
