--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -94,7 +94,7 @@
           <div class="p-6">
             <h3 class="text-xl font-bold">Plano realmente aplicável</h3>
             <p class="mt-1 text-slate-600">
-             Olá, ficamos felizes em poder te ajudar! preparamos com muito carinho uma dieta 100% personalizada para seu IMC e Biotipo! Vamos trabalhar com o simples que funciona! combinações inteligentes e foco!. Já ajudamos milhares de pessoas com o perfil igual ao seu, e temos plena confiança que você irá se sair super bem! 
+             Olá, ficamos felizes em poder te ajudar! preparamos com muito carinho uma dieta 100% personalizada para seu IMC e Biotipo! Vamos trabalhar com o simples que funciona! combinações inteligentes e foco! Já ajudamos milhares de pessoas com o perfil igual ao seu, e temos plena confiança que você irá se sair super bem! 
             </p>
           </div>
         </div>
@@ -192,8 +192,8 @@ const titulo = document.querySelector('h1'); // captura o título principal
 
 if (personalizacao) {
   personalizacao.innerHTML = `
-    ${nome ? `<strong>${nome}</strong>,` : ''}
-    de acordo com seu <strong>IMC ${imc || '—'}</strong> e seu 
+    ${nome ? `<strong></strong>,` : ''}
+    De acordo com seu <strong>IMC ${imc || '—'}</strong> e seu 
     <strong>biotipo ${biotipo || '—'}</strong>, 
     criamos o plano ideal para você alcançar excelentes resultados! 💪
   `;
