--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -192,7 +192,7 @@ const titulo = document.querySelector('h1'); // captura o título principal
 
 if (personalizacao) {
   personalizacao.innerHTML = `
-    ${nome ? `<strong></strong>,` : ''}
+    ${nome ? `<strong></strong>` : ''}
     De acordo com seu <strong>IMC ${imc || '—'}</strong> e seu 
     <strong>biotipo ${biotipo || '—'}</strong>, 
     criamos o plano ideal para você alcançar excelentes resultados! 💪
