--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -137,10 +137,12 @@
           <h3 class="text-xl font-extrabold mt-1">Liberar acesso agora</h3>
           <h4 class="text-2xl font-extrabold mt-3 text-emerald-600">
             <span class="text-amber-600 text-sm uppercase font-semibold block mb-1">🔥 Somente hoje</span>
-            De <span class="text-red-500 line-through">R$ 249,90</span> por apenas <span class="text-emerald-600 text-3xl">R$ 19,90</span>
+            De <span class="text-red-500 line-through">R$ 349,90</span> por apenas <span class="text-emerald-600 text-3xl">R$ 19,90</span>
           </h4>
-          <p class="mt-3 text-slate-700 text-sm leading-relaxed">
-            Estamos oferecendo este valor especial porque <strong>uma vez por ano</strong> abrimos vagas com preço simbólico.
+          <!-- <p class="mt-3 text-slate-700 text-sm leading-relaxed"> --->
+
+           <h3 class="text-xl font-extrabold mt-1"> Estamos oferecendo este valor especial porque <strong>uma vez por ano</strong> abrimos vagas com preço simbólico, para ajudar o maior número de mulheres e homens que já tentaram de tudo, porem sem o plano correto não conseguem chegar ao seu objetivo! Com nosso plano seu sucesso vai depender somente de você! Porque seu plano já está pronto!</h3>
+           
           </p>
           <div class="mt-4 text-sm text-slate-500">Acesso imediato • Conteúdo digital • Suporte por WhatsApp</div>
           <div id="mp-checkout" class="mt-6"></div>
