--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -141,7 +141,7 @@
           </h4>
           <!-- <p class="mt-3 text-slate-700 text-sm leading-relaxed"> --->
 
-           <h5 class="text-xl font-extrabold mt-1"> Estamos oferecendo este valor especial porque <strong>uma vez por ano</strong> abrimos vagas com preço simbólico, para ajudar o maior número de mulheres e homens que já tentaram de tudo, porem sem o plano correto não conseguem chegar ao seu objetivo! Com nosso plano seu sucesso vai depender somente de você! Porque seu plano já está pronto!</h5>
+           <p class="mt-3 text-slate-700 text-sm leading-relaxed">Você deve estar se perguntando.. porque o valor tão baixo? Vamos te explicar... está R$ 19,90 pois <strong>somente uma vez no ano</strong> liberamos vagas com este preço simbólico, com intuito de ajudar o maior número de mulheres e homens que já tentaram de tudo, porem sem o plano correto não conseguiam chegar ao seu objetivo! Sua oportunidade é agora! 
            
           </p>
           <div class="mt-4 text-sm text-slate-500">Acesso imediato • Conteúdo digital • Suporte por WhatsApp</div>
