--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -149,7 +149,7 @@
           <a id="btnPagamento" href="#" class="mt-4 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Quero meu plano agora</a>
          
           <div id="buyersCount" class="mt-4 text-amber-600 font-semibold text-lg">
-  🔥 <span id="buyersNumber">37</span> pessoas compraram nas últimas 24h!
+  🔥 <span id="buyersNumber">37</span> pessoas compraram na última hora!
           </div>
 
         </aside>
