--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -141,10 +141,10 @@
           </h4>
           <!-- <p class="mt-3 text-slate-700 text-sm leading-relaxed"> --->
 
-           <p class="mt-3 text-slate-700 text-sm leading-relaxed">Você deve estar se perguntando.. porque o valor tão baixo? Vamos te explicar... está R$ 19,90 pois <strong>somente uma vez no ano</strong> liberamos vagas com este preço simbólico, com intuito de ajudar o maior número de mulheres e homens que já tentaram de tudo, porem sem o plano correto não conseguiam chegar ao seu objetivo! Sua oportunidade é agora! 
+           <p class="mt-3 text-slate-700 text-sm leading-relaxed">Você deve estar se perguntando.. porque tudo isso por somente R$ 19,90? ... verdade o valor está extremamente baixo, porem tem um motivo pra isso... <strong>somente uma vez no ano</strong> nós liberamos vagas com este preço simbólico, com intuito de ajudar o maior número de mulheres e homens que já tentaram de tudo, porem sem o plano correto não conseguiam chegar ao seu objetivo! Sua oportunidade é agora! 
            
           </p>
-          <div class="mt-4 text-sm text-slate-500">Acesso imediato • Conteúdo digital • Suporte por WhatsApp</div>
+          <div class="mt-4 text-sm text-slate-500">Acesso imediato • Conteúdo digital • Acesso Vitalício</div>
           <div id="mp-checkout" class="mt-6"></div>
           <a id="btnPagamento" href="#" class="mt-4 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Quero meu plano agora</a>
          
@@ -160,7 +160,7 @@
   <!-- GALERIA -->
   <section class="bg-white py-12 border-t border-slate-200">
     <div class="container mx-auto px-4 text-center">
-      <h2 class="text-3xl font-extrabold text-emerald-600 mb-6">Resultados Reais de Nossos Pacientes 💪</h2>
+      <h2 class="text-3xl font-extrabold text-emerald-600 mb-6">Resultados Reais de Alguns dos Nossos Pacientes 💪</h2>
       <div class="galeria grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <img src="https://dietapronta.online/upload/9kg%20em%205%20semanas.jpg" alt="Fernanda Costa" class="w-full object-cover shadow-md">
         <img src="https://dietapronta.online/upload/mariele%20queiroz.jpg" alt="Mariele Queiroz" class="w-full object-cover shadow-md">
