--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -85,7 +85,7 @@
           <a id="btnContinuarTop" href="#oferta" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">
             Ver o que você vai receber
           </a>
-          <span class="text-slate-500 self-center">receba agora! envie imediato!</span>
+          <span class="text-slate-500 self-center">Envio imediato!</span>
         </div>
       </div>
       <div class="relative">
